# field-notes

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  heroku.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_project_ui_filter.py  0003_cells_status_ready.py  0004_coerce_ready_to_open.py  0005_project_position.py  0006_project_archived.py
apps/api/field_notes_api/: __init__.py  __main__.py  auth.py  cli.py  config.py  db.py  events_bus.py  main.py  media.py  models.py  services.py  transfer.py
apps/api/field_notes_api/_web/: index.html
apps/api/field_notes_api/_web/assets/: embed-S92vvM1_.js  index-BTZYoyuH.css  index-BvEIDN_Q.js  index-Cgs-dOlY.css  index-CjXb1DZe.css  index-CyAub9oQ.js  index-D16iNgBd.js
apps/api/field_notes_api/routers/: cells.py  events.py  projects.py  verdicts.py
apps/api/tests/: conftest.py  test_auth.py  test_cells.py  test_events.py  test_healthz.py  test_local_auth.py  test_local_foundation.py  test_local_media.py  test_local_packaging.py  test_local_serve.py  test_local_transfer.py  test_migration_archived_sqlite.py  test_project_counts.py  test_projects.py  test_schema.py  test_static_mount.py  test_verdicts.py
apps/web/: .env.development  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/e2e/: smoke.spec.ts  toc-responsive.spec.ts
apps/web/scripts/: toc-shots.mjs
apps/web/src/: App.tsx  main.tsx  setupTests.ts
apps/web/src/components/: ArchiveModal.test.tsx  ArchiveModal.tsx  Cell.test.tsx  Cell.tsx  CellInserter.placement.test.tsx  CellInserter.tsx  DeepLayer.tsx  EmptyCell.tsx  ErrorBanner.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FilterBar.tsx  InlineEdit.test.tsx  InlineEdit.tsx  KeyGate.tsx  MarkdownCell.test.tsx  MarkdownCell.tsx  MetricRow.test.tsx  MetricRow.tsx  ProjectTabStrip.test.tsx  ProjectTabStrip.tsx  SectionGroup.test.tsx  SectionGroup.tsx  Sparkline.test.tsx  Sparkline.tsx  StatusBadge.tsx  TableOfContents.tsx  TocToggle.tsx  VerdictZone.test.tsx  VerdictZone.tsx  VideoSlot.test.tsx  VideoSlot.tsx  reorder.boundary.test.tsx
apps/web/src/lib/: api.test.ts  api.ts  events.ts  format.test.ts  format.ts  live.resync.test.tsx  live.tsx  markdown.test.ts  markdown.ts  sections.test.ts  sections.ts  store.live.test.ts  store.test.ts  store.ts  types.ts
apps/web/src/styles/: app.css
deploy/: Caddyfile  fly.toml  local-keepalive.sh
docs/superpowers/plans/: 2026-07-01-project-archive.md
docs/superpowers/specs/: 2026-06-21-cell-inline-edit-and-deep-nudge-design.md  2026-07-01-project-archive-design.md
tests/: test_events_bus.py  test_mcp_e2e.py  test_seed.py
tools/: README.md  __init__.py  seed.py
